# aozora-rs

./: .gitignore  Cargo.toml  README.md  index.html  oto.xhtml  shayo.xhtml  update_demo_wasm.bat
.github/workflows/: on_push.yaml  on_release.yaml  wasm_automation.yaml
aozora-rs/: Cargo.toml  README.md  architexture.txt
aozora-rs-core/: Cargo.toml
aozora-rs-core/src/: azerror.rs  deco.rs  lib.rs  meta.rs  nihongo.rs  retokenizer.rs  tokenizer.rs
aozora-rs-core/src/retokenizer/: definitions.rs  processor.rs
aozora-rs-core/src/scopenizer/: conversion.rs  definition.rs  error.rs  parser.rs
aozora-rs-core/src/tokenizer/: definition.rs  note.rs  parser.rs
aozora-rs-epub/: Cargo.toml
aozora-rs-epub/assets/: container.xml  nav.xhtml  nav_header  template.opf  template.xhtml  toc.ncx  xhtml_header
aozora-rs-epub/src/: epub.rs  lib.rs  opf.rs  zip.rs
aozora-rs-epub/src/epub/: nav.rs  ncx.rs  opf.rs  xhtml.rs
aozora-rs-gaiji/: .gitignore  Cargo.toml  build.rs  char_to_gaiji.map  gaiji_chuki.rs  gaiji_to_char.map  menkuten.rs  menkuten_to_unicode.map
aozora-rs-gaiji/gaiji-chuki-parser/: Cargo.toml
aozora-rs-gaiji/gaiji-chuki-parser/src/: lib.rs
aozora-rs-gaiji/src/: lib.rs  menkuten.rs  parser.rs  shift_jis.rs  whole.rs
aozora-rs-qa/: .gitignore  Cargo.toml
aozora-rs-qa/src/: gaiji.rs  main.rs  map_cache.rs  note.rs  speed.rs
aozora-rs-tester/: .gitignore  Cargo.toml
aozora-rs-tester/src/: lib.rs  map_cache.rs  sync.rs
aozora-rs-wasm/: Cargo.toml
aozora-rs-wasm/src/: lib.rs
aozora-rs-xhtml/: Cargo.toml  credit.txt  output.html
aozora-rs-xhtml/src/: convert.rs  definitions.rs  dom.rs  lib.rs  main.rs  xhtmlnize.rs
aozora-rs-xhtml/src/xhtmlnize/: definitions.rs  validate.rs
aozora-rs-xhtml/style/: aozora.css  bosen.css  boten.css
aozora-rs-zip/: Cargo.toml
aozora-rs-zip/src/: lib.rs
aozora-rs/aozora-rs/: Cargo.toml  README.md
aozora-rs/aozora-rs-core/: Cargo.toml  README.md
aozora-rs/aozora-rs-core/docs/: retokenize.md  tokenize.md
aozora-rs/aozora-rs-core/docs/note/: backref.md  multiline.md  note.md  sandwiched.md  single.md  wholeline.md
aozora-rs/aozora-rs-core/src/: deco.rs  error.rs  lib.rs  meta.rs  nihongo.rs  retokenizer.rs  scopenizer.rs  tokenizer.rs
aozora-rs/aozora-rs-core/src/error/: azerror.rs  decolated.rs
aozora-rs/aozora-rs-core/src/retokenizer/: definitions.rs  processor.rs  test.rs
aozora-rs/aozora-rs-core/src/retokenizer/definitions/: pages.rs
aozora-rs/aozora-rs-core/src/scopenizer/: conversion.rs  definition.rs  error.rs  parser.rs  test.rs
aozora-rs/aozora-rs-core/src/tokenizer/: annotation.rs  definition.rs  note.rs  parser.rs  test.rs
aozora-rs/aozora-rs-core/src/tokenizer/annotation/: backref.rs  multiline.rs  pagedef.rs  sandwiched.rs  wholeline.rs
aozora-rs/aozora-rs-core/src/tokenizer/note/: backref.rs  definitions.rs  multiline.rs  sandwiched.rs  single.rs  wholeline.rs
aozora-rs/aozora-rs-epub/: Cargo.toml
aozora-rs/aozora-rs-epub/assets/: container.xml  opf_header
aozora-rs/aozora-rs-epub/src/: epub.rs  lib.rs
aozora-rs/aozora-rs-epub/src/epub/: nav.rs  ncx.rs  opf.rs  xhtml.rs
aozora-rs/aozora-rs-gaiji/: Cargo.toml  build.rs  gaiji_chuki.rs  menkuten.rs
aozora-rs/aozora-rs-gaiji/gaiji-chuki-parser/src/: lib.rs
aozora-rs/aozora-rs-gaiji/src/: lib.rs  test.rs  whole.rs
aozora-rs/aozora-rs-qa/: Cargo.toml  build.rs
aozora-rs/aozora-rs-qa/src/: analyse.rs  gaiji.rs  main.rs  map_cache.rs  note.rs  speed.rs  sync.rs
aozora-rs/aozora-rs-qa/src/analyse/: per_work.rs  plot.rs  sysinfo.rs
aozora-rs/aozora-rs-wasm/: Cargo.toml
aozora-rs/aozora-rs-wasm/src/: lib.rs
aozora-rs/aozora-rs-xhtml/: Cargo.toml
aozora-rs/aozora-rs-xhtml/src/: definitions.rs  lib.rs  xhtmlnize.rs
aozora-rs/aozora-rs-xhtml/src/xhtmlnize/: deco_begin.rs  deco_end.rs  definitions.rs
aozora-rs/aozora-rs-xhtml/style/: aozora.css  boten.css
aozora-rs/aozora-rs-zip/: Cargo.toml
aozora-rs/aozora-rs-zip/src/: lib.rs
aozora-rs/aozora-rs/src/: errors.rs  lib.rs  style.rs
aozora-rs/assets/test_data/: haruto_shura.txt  oto.txt  tsumito_batsu.txt
aozora-rs/example/: shayo.txt
aozora-rs/src/: deco.rs  lib.rs  main.rs  nihongo.rs  retokenizer.rs  scopenizer.rs  tokenizer.rs
aozora-rs/src/retokenizer/: processor.rs
aozora-rs/src/scopenizer/: conversion.rs  definition.rs  error.rs  parser.rs
aozora-rs/src/tokenizer/: command.rs  definition.rs  note.rs  parser.rs
aozora-rs/src/tokenizer/command/: backref.rs  definitions.rs  multiline.rs  sandwiched.rs  single.rs  wholeline.rs
aozora-rs/src/tokenizer/note/: backref.rs  single.rs
applications/ayame-app/: Cargo.toml
applications/ayame-app/src/: main.rs
applications/ayame-cli/: Cargo.toml
applications/ayame-cli/src/: main.rs
applications/ayame-core/assets/: miyabi.css
applications/ayame-core/src/: lib.rs
applications/demopage/: app.js  preview_onsite.css  style.css
applications/lsp/: Cargo.toml
applications/lsp/src/: completion.rs  document.rs  folding.rs  hover.rs  line_index.rs  main.rs  semantic_tokens.rs  server.rs
applications/qa/: .gitignore
applications/zed-aozora/: Cargo.toml  extension.toml
ayame/: README.md
ayame-app/: Cargo.toml  errors.txt  package-lock.json  package.json  tailwind.config.js  仕様書.md
ayame-app/src/: App.tsx  index.css  main.rs  types.ts
ayame-app/src-tauri/: Cargo.toml  tauri.conf.json
ayame-cli/: Cargo.toml
ayame-cli/src/: main.rs
ayame-core/: Cargo.toml
ayame-core/assets/: base.xhtml  horizontal.css  prelude.css
ayame-core/src/: lib.rs
ayame-demo/: SPECIFICATION.md  app.js  index.html  preview.css  style.css
ayame-demo/pkg/: aozora_rs_wasm.d.ts  aozora_rs_wasm.js  aozora_rs_wasm_bg.wasm  aozora_rs_wasm_bg.wasm.d.ts  package.json
ayame/ayame/: Cargo.toml
ayame/ayame-app/: Cargo.toml
ayame/ayame-cli/: Cargo.toml
ayame/ayame-demo/: app.js  index.html  preview.css  preview_onsite.css  style.css  web_worker.js
docs/: applications.md  library.md
docs/typst/: doorpage.typ  prelude.typ  presentation.typ  util.typ
example/: 03rososhinkan_retsuden.txt
(+33 files in other folders)
