[workspace]
members = [
    # aozora-rs
    "aozora-rs/aozora-rs-core", "aozora-rs/aozora-rs-qa",
    "aozora-rs/aozora-rs-gaiji", "aozora-rs/aozora-rs-xhtml",
    "aozora-rs/aozora-rs-epub", "aozora-rs/aozora-rs",
    "aozora-rs/aozora-rs-wasm", "aozora-rs/aozora-rs-zip",
    "aozora-rs/aozora-rs-gaiji/gaiji-chuki-parser",
    # ayame
    "ayame/ayame-cli", "ayame/ayame-core",
    "ayame/ayame-app",
]
resolver = "3"

[workspace.dependencies]
# aozora-rs
aozora-rs = { path = "./aozora-rs/aozora-rs" }
aozora-rs-core = { path = "./aozora-rs/aozora-rs-core" }
aozora-rs-gaiji = { path = "./aozora-rs/aozora-rs-gaiji" }
aozora-rs-xhtml = { path = "./aozora-rs/aozora-rs-xhtml" }
aozora-rs-epub = { path = "./aozora-rs/aozora-rs-epub" }
aozora-rs-wasm = { path = "./aozora-rs/aozora-rs-wasm" }
aozora-rs-zip = { path = "./aozora-rs/aozora-rs-zip" }
gaiji-chuki-parser = { path = "./aozora-rs/aozora-rs-gaiji/gaiji-chuki-parser" }

# ayame
ayame-core = { path = "./ayame/ayame-core" }

serde = { version = "1", features = ["derive"] }
encoding_rs = "0.8.35"
miette = { version = "7.6.0", features = ["fancy"] }
winnow = "0.7.14"
thiserror = "2.0.18"
itertools = "0.14.0"
time = { version = "0.3", features = ["wasm-bindgen"] }
chrono = { version = "0.4", features = ["wasmbind"] }
uuid = { version = "1.20.0", features = ["v5", "fast-rng", "macro-diagnostics", "js"] }
zip = { version = "2.2.0", default-features = false, features = ["deflate", "time"] }
wasm-bindgen = "0.2.108"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking"] }
futures = "0.3.31"
rkyv = "0.8"
walkdir = "2.5.0"
ratatui = "0.29"
crossterm = "0.28"
unicode-width = "0.1"
rayon = "1.11.0"
ansi-to-tui = "7.0.0"
bimap = "0.6.3"
pdfium-render = "0.8"
flate2 = "1.0"
tar = "0.4"
enum_dispatch = "0.3.13"
