[workspace]
members = [
    # aozora-rs
    "aozora-rs/aozora-rs-core", "aozora-rs/aozora-rs-qa",
    "aozora-rs/aozora-rs-gaiji", "aozora-rs/aozora-rs-xhtml",
    "aozora-rs/aozora-rs-epub", "aozora-rs/aozora-rs",
    "aozora-rs/aozora-rs-wasm", "aozora-rs/aozora-rs-zip",
    "aozora-rs/aozora-rs-gaiji/gaiji-chuki-parser",
    # ayame
    "ayame/ayame", "ayame/ayame-cli",
    "ayame/ayame-app",
]
resolver = "3"

[workspace.dependencies]
# aozora-rs
aozora-rs.path = "./aozora-rs/aozora-rs"
aozora-rs-core.path = "./aozora-rs/aozora-rs-core"
aozora-rs-gaiji.path = "./aozora-rs/aozora-rs-gaiji"
aozora-rs-xhtml.path = "./aozora-rs/aozora-rs-xhtml"
aozora-rs-epub.path = "./aozora-rs/aozora-rs-epub"
aozora-rs-zip.path = "./aozora-rs/aozora-rs-zip"
gaiji-chuki-parser.path = "./aozora-rs/aozora-rs-gaiji/gaiji-chuki-parser"

# ayame
ayame.path = "./ayame/ayame"

# external crates
encoding_rs = "0.8.35"
winnow = "0.7.14"
serde = { version = "1", features = ["derive"] }
itertools = "0.14.0"
time = { version = "0.3", features = ["wasm-bindgen", "formatting"] }
uuid = { version = "1.20.0", features = ["v5", "js"] }
zip = { version = "2.2.0", default-features = false, features = ["time", "deflate"] }
wasm-bindgen = "0.2.108"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
rkyv = "0.8"
walkdir = "2.5.0"
rayon = "1.11.0"
pdfium-render = "0.8"
flate2 = "1.0"
tar = "0.4"
gpui = "0.2.2"
gpui-component = "0.5.1"
rfd = "0.17.2"
colored = "3.1.1"
memchr = "2.8.0"
serde_json = "1.0.149"
image = "0.24"
imageproc = "0.23"
rusttype = "0.9"
sysinfo = "0.38.4"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1.7"
ureq = "3.3.0"
const_format = "0.2.36"
