[package]
name = "aozora-rs-gaiji"
version = "0.1.0"
edition = "2024"

[dependencies]
bimap = "0.6.3"
rkyv = { version = "0.7", features = ["validation"] }
pdfium-render = { version = "0.8", optional = true }
reqwest = { version = "0.11", features = ["blocking"], optional = true }
flate2 = { version = "1.0", optional = true }
tar = { version = "0.4", optional = true }
winnow = "0.7"
encoding_rs = "0.8.35"

[features]
extract = ["dep:pdfium-render", "dep:reqwest", "dep:flate2", "dep:tar"]

[[bin]]
name = "extract"
path = "src/bin/extract/main.rs"
required-features = ["extract"]

[[bin]]
name = "gen_menkuten"
path = "src/bin/gen_menkuten.rs"

[[bin]]
name = "verify_jis"
path = "src/bin/verify_jis.rs"
