[package]
name = "aozora-rs-gaiji"
version = "0.1.0"
edition = "2024"

[dependencies]
bimap = { workspace = true }
rkyv = { workspace = true }
winnow = { workspace = true }
encoding_rs = { workspace = true }
gaiji-chuki-parser = { workspace = true }

[build-dependencies]
pdfium-render = { workspace = true }
reqwest = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
tokio = { workspace = true }
rkyv = { workspace = true }
winnow = { workspace = true }
gaiji-chuki-parser = { workspace = true }
