[package]
name = "aozora-rs-tester"
version = "0.1.0"
edition = "2024"

[dependencies]
aozora-rs-core = { path = "../aozora-rs-core" }
aozora-rs-gaiji = { path="../aozora-rs-gaiji" }
encoding_rs = "0.8.35"
futures = "0.3.31"
rkyv = { version = "0.7", features = ["validation"] }
tokio = {version="1.49.0", features = ["full"]}
walkdir = "2.5.0"
winnow = "0.7.14"
ratatui = "0.29"
crossterm = "0.28"
unicode-width = "0.1"
rayon = "1.11.0"
miette = { version = "7.6.0", features = ["fancy"] }
ansi-to-tui = "7.0.0"

[[bin]]
name = "qa"
path = "./src/main.rs"
