[package]
name = "aozora-rs-tester"
version = "0.1.0"
edition = "2024"

[dependencies]
aozora-rs-core = { workspace = true }
aozora-rs-gaiji = { workspace = true }
encoding_rs = { workspace = true }
futures = { workspace = true }
rkyv = { workspace = true }
tokio = { workspace = true }
walkdir = { workspace = true }
winnow = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
unicode-width = { workspace = true }
rayon = { workspace = true }
miette = { workspace = true }
ansi-to-tui = { workspace = true }

[[bin]]
name = "qa"
path = "./src/main.rs"
