[package]
name = "aozora-rs-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aozora-rs-core = { workspace = true }
aozora-rs-epub = { workspace = true }
aozora-rs-xhtml = { workspace = true }
miette = { workspace = true }
wasm-bindgen = { workspace = true }
