[package]
name = "aozora-rs-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aozora-rs = { workspace = true }
aozora-rs-zip = { workspace = true }
console_error_panic_hook = "0.1.7"
miette = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { version = "0.3", features = ["console"] }
time = { workspace = true }
