[package]
name = "ayame-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ayame"
path = "src/main.rs"

[dependencies]
aozora-rs = { version = "0.1.0", path = "../aozora-rs" }
clap = { version = "4", features = ["derive"] }
encoding_rs = "0.8"
miette = { version = "7.6.0", features = ["fancy"] }
