[package]
name = "aozora-rs-gaiji"
version = "0.1.0"
edition = "2024"

[dependencies]
rkyv.workspace = true
winnow.workspace = true
gaiji-chuki-parser.workspace = true

[build-dependencies]
pdfium-render.workspace = true
flate2.workspace = true
tar.workspace = true
rkyv.workspace = true
winnow.workspace = true
gaiji-chuki-parser.workspace = true
ureq.workspace = true
