[package]
name = "aozora-rs-qa"
version = "0.1.0"
edition = "2024"

[dependencies]
aozora-rs = { workspace = true }
encoding_rs = { workspace = true }
rkyv = { workspace = true }
tokio = { workspace = true }
walkdir = { workspace = true }
winnow = { workspace = true }
unicode-width = { workspace = true }
rayon = { workspace = true }
miette = { workspace = true }

[[bin]]
name = "qa"
path = "./src/main.rs"
