[package]
name = "aozora-rs-qa"
version = "0.1.0"
edition = "2024"

[dependencies]
aozora-rs.workspace = true
encoding_rs.workspace = true
rkyv.workspace = true
tokio.workspace = true
walkdir.workspace = true
winnow.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
sysinfo.workspace = true
image.workspace = true
imageproc.workspace = true
rusttype.workspace = true
const_format.workspace = true
colored.workspace = true

[[bin]]
name = "qa"
path = "./src/main.rs"
