[package]
name = "aozora-rs-wasm"
version = "0.1.0"
edition = "2024"

description = "Pure-Rustな超高速青空文庫書式パーサー"
repository = "https://github.com/kinoko0518/aozora-rs"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aozora-rs.workspace = true
aozora-rs-zip.workspace = true
ayame.workspace = true
wasm-bindgen.workspace = true
console_error_panic_hook.workspace = true

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
